test/MC/SVE/regression-tests/negative_tests/sve-ldnt1h-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU16CLoadNT2LSSZ
// Offset register Rm cannot be xzr
ldnt1h z28.h, p3/z, [x12, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
